# serializer version: 1
# name: test_gt_plt_bar_pct_snap
  '''
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_right"><div style="display: flex;"><svg xmlns="http://www.w3.org/2000/svg" width="100px" height="16px"><rect x="0" y="0" width="100px" height="16px" fill="#e1e1e1"/><rect x="0" y="0" width="0.33333333333333337px" height="16px" fill="purple"/></svg></div></td>
      <td class="gt_row gt_left">apricot</td>
      <td class="gt_row gt_left">one</td>
      <td class="gt_row gt_right">2015-01-15</td>
      <td class="gt_row gt_right">13:35</td>
      <td class="gt_row gt_right">2018-01-01 02:22</td>
      <td class="gt_row gt_right">49.95</td>
      <td class="gt_row gt_left">row_1</td>
      <td class="gt_row gt_left">grp_a</td>
    </tr>
    <tr>
      <td class="gt_row gt_right"><div style="display: flex;"><svg xmlns="http://www.w3.org/2000/svg" width="100px" height="16px"><rect x="0" y="0" width="100px" height="16px" fill="#e1e1e1"/><rect x="0" y="0" width="6.666666666666668px" height="16px" fill="purple"/></svg></div></td>
      <td class="gt_row gt_left">banana</td>
      <td class="gt_row gt_left">two</td>
      <td class="gt_row gt_right">2015-02-15</td>
      <td class="gt_row gt_right">14:40</td>
      <td class="gt_row gt_right">2018-02-02 14:33</td>
      <td class="gt_row gt_right">17.95</td>
      <td class="gt_row gt_left">row_2</td>
      <td class="gt_row gt_left">grp_a</td>
    </tr>
    <tr>
      <td class="gt_row gt_right"><div style="display: flex;"><svg xmlns="http://www.w3.org/2000/svg" width="100px" height="16px"><rect x="0" y="0" width="100px" height="16px" fill="#e1e1e1"/><rect x="0" y="0" width="100.0px" height="16px" fill="purple"/></svg></div></td>
      <td class="gt_row gt_left">coconut</td>
      <td class="gt_row gt_left">three</td>
      <td class="gt_row gt_right">2015-03-15</td>
      <td class="gt_row gt_right">15:45</td>
      <td class="gt_row gt_right">2018-03-03 03:44</td>
      <td class="gt_row gt_right">1.39</td>
      <td class="gt_row gt_left">row_3</td>
      <td class="gt_row gt_left">grp_a</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_gt_plt_bar_snap
  '''
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_right"><div style="display: flex;"><svg xmlns="http://www.w3.org/2000/svg" width="60" height="30"><rect x="0" y="5.0px" width="0.2px" height="20px" fill="purple"/><text dominant-baseline="central" text-anchor="end" font-size="12.0" fill="white" x="0.196px" y="15.0px"/><line stroke="black" stroke-width="3.0px" x1="0" y1="0" x2="0" y2="30px"/></svg></div></td>
      <td class="gt_row gt_left">apricot</td>
      <td class="gt_row gt_left">one</td>
      <td class="gt_row gt_right">2015-01-15</td>
      <td class="gt_row gt_right">13:35</td>
      <td class="gt_row gt_right">2018-01-01 02:22</td>
      <td class="gt_row gt_right">49.95</td>
      <td class="gt_row gt_left">row_1</td>
      <td class="gt_row gt_left">grp_a</td>
    </tr>
    <tr>
      <td class="gt_row gt_right"><div style="display: flex;"><svg xmlns="http://www.w3.org/2000/svg" width="60" height="30"><rect x="0" y="5.0px" width="4.0px" height="20px" fill="purple"/><text dominant-baseline="central" text-anchor="end" font-size="12.0" fill="white" x="3.92px" y="15.0px"/><line stroke="black" stroke-width="3.0px" x1="0" y1="0" x2="0" y2="30px"/></svg></div></td>
      <td class="gt_row gt_left">banana</td>
      <td class="gt_row gt_left">two</td>
      <td class="gt_row gt_right">2015-02-15</td>
      <td class="gt_row gt_right">14:40</td>
      <td class="gt_row gt_right">2018-02-02 14:33</td>
      <td class="gt_row gt_right">17.95</td>
      <td class="gt_row gt_left">row_2</td>
      <td class="gt_row gt_left">grp_a</td>
    </tr>
    <tr>
      <td class="gt_row gt_right"><div style="display: flex;"><svg xmlns="http://www.w3.org/2000/svg" width="60" height="30"><rect x="0" y="5.0px" width="60.0px" height="20px" fill="purple"/><text dominant-baseline="central" text-anchor="end" font-size="12.0" fill="white" x="58.8px" y="15.0px"/><line stroke="black" stroke-width="3.0px" x1="0" y1="0" x2="0" y2="30px"/></svg></div></td>
      <td class="gt_row gt_left">coconut</td>
      <td class="gt_row gt_left">three</td>
      <td class="gt_row gt_right">2015-03-15</td>
      <td class="gt_row gt_right">15:45</td>
      <td class="gt_row gt_right">2018-03-03 03:44</td>
      <td class="gt_row gt_right">1.39</td>
      <td class="gt_row gt_left">row_3</td>
      <td class="gt_row gt_left">grp_a</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_gt_plt_bar_stack_snap
  '''
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_left">A</td>
      <td class="gt_row gt_right"><div style="position:relative; width:100px; height:30px;">
              <div style="
                  position:absolute;
                  left:0px;
                  top:0px;
                  width:32.666666666666664px;
                  height:30px;
                  background:red;
              "><div style="
                  position:absolute;
                  left:50%;
                  top:50%;
                  transform:translateX(-50%) translateY(-50%);
                  font-size:10px;
                  color:#000000;
              ">10</div></div><div style="
                  position:absolute;
                  left:34.666666666666664px;
                  top:0px;
                  width:65.33333333333333px;
                  height:30px;
                  background:blue;
              "><div style="
                  position:absolute;
                  left:50%;
                  top:50%;
                  transform:translateX(-50%) translateY(-50%);
                  font-size:10px;
                  color:#FFFFFF;
              ">20</div></div>
          </div></td>
    </tr>
    <tr>
      <td class="gt_row gt_left">B</td>
      <td class="gt_row gt_right"><div style="position:relative; width:100px; height:30px;">
              <div style="
                  position:absolute;
                  left:0px;
                  top:0px;
                  width:56.0px;
                  height:30px;
                  background:red;
              "><div style="
                  position:absolute;
                  left:50%;
                  top:50%;
                  transform:translateX(-50%) translateY(-50%);
                  font-size:10px;
                  color:#000000;
              ">40</div></div><div style="
                  position:absolute;
                  left:58.0px;
                  top:0px;
                  width:42.0px;
                  height:30px;
                  background:blue;
              "><div style="
                  position:absolute;
                  left:50%;
                  top:50%;
                  transform:translateX(-50%) translateY(-50%);
                  font-size:10px;
                  color:#FFFFFF;
              ">30</div></div>
          </div></td>
    </tr>
  </tbody>
  '''
# ---
# name: test_gt_plt_bullet_snap
  '''
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_left">A</td>
      <td class="gt_row gt_right"><div style="display: flex;"><svg xmlns="http://www.w3.org/2000/svg" width="60" height="30"><rect x="0" y="5.0px" width="24.0px" height="20px" fill="purple"/><text dominant-baseline="central" text-anchor="end" font-size="12.0" fill="black" x="23.52px" y="15.0px"/><line stroke="black" stroke-width="3.0px" x1="0" y1="0" x2="0" y2="30px"/><line stroke="darkgrey" stroke-width="3.0px" x1="27.299999999999997px" y1="0" x2="27.299999999999997px" y2="30px"/></svg></div></td>
    </tr>
    <tr>
      <td class="gt_row gt_left">B</td>
      <td class="gt_row gt_right"><div style="display: flex;"><svg xmlns="http://www.w3.org/2000/svg" width="60" height="30"><rect x="0" y="5.0px" width="36.0px" height="20px" fill="purple"/><text dominant-baseline="central" text-anchor="end" font-size="12.0" fill="black" x="35.28px" y="15.0px"/><line stroke="black" stroke-width="3.0px" x1="0" y1="0" x2="0" y2="30px"/><line stroke="darkgrey" stroke-width="3.0px" x1="41.699999999999996px" y1="0" x2="41.699999999999996px" y2="30px"/></svg></div></td>
    </tr>
    <tr>
      <td class="gt_row gt_left">C</td>
      <td class="gt_row gt_right"><div style="display: flex;"><svg xmlns="http://www.w3.org/2000/svg" width="60" height="30"><rect x="0" y="5.0px" width="60.0px" height="20px" fill="purple"/><text dominant-baseline="central" text-anchor="end" font-size="12.0" fill="black" x="58.8px" y="15.0px"/><line stroke="black" stroke-width="3.0px" x1="0" y1="0" x2="0" y2="30px"/><line stroke="darkgrey" stroke-width="3.0px" x1="46.5px" y1="0" x2="46.5px" y2="30px"/></svg></div></td>
    </tr>
  </tbody>
  '''
# ---
# name: test_gt_plt_conf_int_snap
  '''
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_left">A</td>
      <td class="gt_row gt_right"><div style="position:relative; width:100px; height:30px;">
              <div style="position:absolute;left:26.69491525423729px;bottom:11.5px;color:black;font-size:10px;">4.1</div>
              <div style="position:absolute;left:57.768361581920914px;bottom:11.5px;color:black;font-size:10px;transform:translateX(-100%);">6.3</div>
              <div style="
                  position:absolute; left:26.69491525423729px;
                  top:18.5px; width:31.073446327683623px;
                  height:3.0px; background:royalblue; border-radius:2px;
              "></div>
              <div style="
                  position:absolute; left:39.2316384180791px;
                  top:17.0px; width:6.0px; height:6.0px;
                  background:red; border-radius:50%;
                  border:1.5px solid red; box-sizing:border-box;
              "></div>
              </div></td>
      <td class="gt_row gt_right">4.1</td>
      <td class="gt_row gt_right">6.3</td>
    </tr>
    <tr>
      <td class="gt_row gt_left">B</td>
      <td class="gt_row gt_right"><div style="position:relative; width:100px; height:30px;">
              <div style="position:absolute;left:66.24293785310735px;bottom:11.5px;color:black;font-size:10px;">6.9</div>
              <div style="position:absolute;left:91.66666666666666px;bottom:11.5px;color:black;font-size:10px;transform:translateX(-100%);">8.7</div>
              <div style="
                  position:absolute; left:66.24293785310735px;
                  top:18.5px; width:25.423728813559308px;
                  height:3.0px; background:royalblue; border-radius:2px;
              "></div>
              <div style="
                  position:absolute; left:75.95480225988702px;
                  top:17.0px; width:6.0px; height:6.0px;
                  background:red; border-radius:50%;
                  border:1.5px solid red; box-sizing:border-box;
              "></div>
              </div></td>
      <td class="gt_row gt_right">6.9</td>
      <td class="gt_row gt_right">8.7</td>
    </tr>
    <tr>
      <td class="gt_row gt_left">C</td>
      <td class="gt_row gt_right"><div style="position:relative; width:100px; height:30px;">
              <div style="position:absolute;left:8.333333333333332px;bottom:11.5px;color:black;font-size:10px;">2.8</div>
              <div style="position:absolute;left:25.282485875706218px;bottom:11.5px;color:black;font-size:10px;transform:translateX(-100%);">4</div>
              <div style="
                  position:absolute; left:8.333333333333332px;
                  top:18.5px; width:16.949152542372886px;
                  height:3.0px; background:royalblue; border-radius:2px;
              "></div>
              <div style="
                  position:absolute; left:13.807909604519775px;
                  top:17.0px; width:6.0px; height:6.0px;
                  background:red; border-radius:50%;
                  border:1.5px solid red; box-sizing:border-box;
              "></div>
              </div></td>
      <td class="gt_row gt_right">2.8</td>
      <td class="gt_row gt_right">4.0</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_gt_plt_dot_snap
  '''
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_right">0.1111</td>
      <td class="gt_row gt_left">apricot</td>
      <td class="gt_row gt_left"><div>
              <div style="display:inline-block; float:left; margin-right:0px;">
                  one
                  <div style="height:0.7em; width:0.7em; background-color:#000000;border-radius:50%; margin-top:4px; display:inline-block;float:left; margin-right:2px;"></div>
                  <div style="display:inline-block; float:right; line-height:20px; padding:0px 2.5px;"></div>
              </div>
              <div style="position:relative; top:1.2em;">
                  <div><div style="flex-grow:1; margin-left:0px;">  <div style="background:#000000; width:100.0%; height:4px; border-radius:2px;"></div> </div></div>
              </div>
          </div></td>
      <td class="gt_row gt_right">2015-01-15</td>
      <td class="gt_row gt_right">13:35</td>
      <td class="gt_row gt_right">2018-01-01 02:22</td>
      <td class="gt_row gt_right">49.95</td>
      <td class="gt_row gt_left">row_1</td>
      <td class="gt_row gt_left">grp_a</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">2.222</td>
      <td class="gt_row gt_left">banana</td>
      <td class="gt_row gt_left"><div>
              <div style="display:inline-block; float:left; margin-right:0px;">
                  two
                  <div style="height:0.7em; width:0.7em; background-color:#25bce6;border-radius:50%; margin-top:4px; display:inline-block;float:left; margin-right:2px;"></div>
                  <div style="display:inline-block; float:right; line-height:20px; padding:0px 2.5px;"></div>
              </div>
              <div style="position:relative; top:1.2em;">
                  <div><div style="flex-grow:1; margin-left:0px;">  <div style="background:#25bce6; width:35.93593593593593%; height:4px; border-radius:2px;"></div> </div></div>
              </div>
          </div></td>
      <td class="gt_row gt_right">2015-02-15</td>
      <td class="gt_row gt_right">14:40</td>
      <td class="gt_row gt_right">2018-02-02 14:33</td>
      <td class="gt_row gt_right">17.95</td>
      <td class="gt_row gt_left">row_2</td>
      <td class="gt_row gt_left">grp_a</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">33.33</td>
      <td class="gt_row gt_left">coconut</td>
      <td class="gt_row gt_left"><div>
              <div style="display:inline-block; float:left; margin-right:0px;">
                  three
                  <div style="height:0.7em; width:0.7em; background-color:#9e9e9e;border-radius:50%; margin-top:4px; display:inline-block;float:left; margin-right:2px;"></div>
                  <div style="display:inline-block; float:right; line-height:20px; padding:0px 2.5px;"></div>
              </div>
              <div style="position:relative; top:1.2em;">
                  <div><div style="flex-grow:1; margin-left:0px;">  <div style="background:#9e9e9e; width:2.7827827827827822%; height:4px; border-radius:2px;"></div> </div></div>
              </div>
          </div></td>
      <td class="gt_row gt_right">2015-03-15</td>
      <td class="gt_row gt_right">15:45</td>
      <td class="gt_row gt_right">2018-03-03 03:44</td>
      <td class="gt_row gt_right">1.39</td>
      <td class="gt_row gt_left">row_3</td>
      <td class="gt_row gt_left">grp_a</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_gt_plt_dumbbell_snap
  '''
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_right"><div style="position:relative; width:100px; height:30px; box-sizing:content-box;">
              <div style="position:absolute; left:8.333333333333332px; bottom:14.5px; transform:translateX(-50%); color:purple; font-size:10px; font-weight:bold;">10.0</div>
              <div style="position:absolute; left:29.166666666666668px; bottom:14.5px; transform:translateX(-50%); color:green; font-size:10px; font-weight:bold;">15.0</div>
              <div style="
                  position:absolute; left:8.333333333333332px;
                  top:18.5px; width:20.833333333333336px;
                  height:3.0px; background:grey;
                  border-radius:2px;
              "></div>
              <div style="position:absolute; left:3.833333333333332px; top:15.5px; width:6.0px; height:6.0px; background:purple; border-radius:50%; border:1.5px solid white; box-sizing: content-box;"></div>
              <div style="position:absolute; left:24.666666666666668px; top:15.5px; width:6.0px; height:6.0px; background:green; border-radius:50%; border:1.5px solid white; box-sizing: content-box;"></div>
          </div></td>
    </tr>
    <tr>
      <td class="gt_row gt_right"><div style="position:relative; width:100px; height:30px; box-sizing:content-box;">
              <div style="position:absolute; left:29.166666666666668px; bottom:14.5px; transform:translateX(-50%); color:purple; font-size:10px; font-weight:bold;">15.0</div>
              <div style="position:absolute; left:50.0px; bottom:14.5px; transform:translateX(-50%); color:green; font-size:10px; font-weight:bold;">20.0</div>
              <div style="
                  position:absolute; left:29.166666666666668px;
                  top:18.5px; width:20.833333333333332px;
                  height:3.0px; background:grey;
                  border-radius:2px;
              "></div>
              <div style="position:absolute; left:24.666666666666668px; top:15.5px; width:6.0px; height:6.0px; background:purple; border-radius:50%; border:1.5px solid white; box-sizing: content-box;"></div>
              <div style="position:absolute; left:45.5px; top:15.5px; width:6.0px; height:6.0px; background:green; border-radius:50%; border:1.5px solid white; box-sizing: content-box;"></div>
          </div></td>
    </tr>
    <tr>
      <td class="gt_row gt_right"><div style="position:relative; width:100px; height:30px; box-sizing:content-box;">
              <div style="position:absolute; left:70.83333333333334px; bottom:14.5px; transform:translateX(-50%); color:purple; font-size:10px; font-weight:bold;">25.0</div>
              <div style="position:absolute; left:91.66666666666666px; bottom:14.5px; transform:translateX(-50%); color:green; font-size:10px; font-weight:bold;">30.0</div>
              <div style="
                  position:absolute; left:70.83333333333334px;
                  top:18.5px; width:20.833333333333314px;
                  height:3.0px; background:grey;
                  border-radius:2px;
              "></div>
              <div style="position:absolute; left:66.33333333333334px; top:15.5px; width:6.0px; height:6.0px; background:purple; border-radius:50%; border:1.5px solid white; box-sizing: content-box;"></div>
              <div style="position:absolute; left:87.16666666666666px; top:15.5px; width:6.0px; height:6.0px; background:green; border-radius:50%; border:1.5px solid white; box-sizing: content-box;"></div>
          </div></td>
    </tr>
  </tbody>
  '''
# ---
# name: test_gt_plt_winloss_snap
  '''
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_left">A</td>
      <td class="gt_row gt_right"><div style="position:relative; width:80px; height:30px;">
              <div style="
                  position:absolute;
                  left:0.0px;
                  top:6.0px;
                  width:24.666666666666668px;
                  height:12.0px;
                  background:blue;
                  border-radius:2px;
              "></div><div style="
                  position:absolute;
                  left:26.666666666666668px;
                  top:12.0px;
                  width:24.666666666666668px;
                  height:6.0px;
                  background:grey;
                  border-radius:2px;
              "></div><div style="
                  position:absolute;
                  left:53.333333333333336px;
                  top:12.0px;
                  width:24.666666666666668px;
                  height:12.0px;
                  background:red;
                  border-radius:2px;
              "></div>
          </div></td>
    </tr>
    <tr>
      <td class="gt_row gt_left">B</td>
      <td class="gt_row gt_right"><div style="position:relative; width:80px; height:30px;">
              <div style="
                  position:absolute;
                  left:0.0px;
                  top:12.0px;
                  width:24.666666666666668px;
                  height:12.0px;
                  background:red;
                  border-radius:2px;
              "></div><div style="
                  position:absolute;
                  left:26.666666666666668px;
                  top:12.0px;
                  width:24.666666666666668px;
                  height:12.0px;
                  background:red;
                  border-radius:2px;
              "></div><div style="
                  position:absolute;
                  left:53.333333333333336px;
                  top:6.0px;
                  width:24.666666666666668px;
                  height:12.0px;
                  background:blue;
                  border-radius:2px;
              "></div>
          </div></td>
    </tr>
  </tbody>
  '''
# ---
